media/css/firefox/tiles.less
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

@import "../sandstone/lib.less";

@font-face {
    font-family: 'Open Sans';
    src: url('/media/fonts/OpenSans-BoldItalic-webfont.eot?#iefix') format('embedded-opentype'),
         url('/media/fonts/OpenSans-BoldItalic-webfont.woff') format('woff'),
         url('/media/fonts/OpenSans-BoldItalic-webfont.ttf') format('truetype');
    font-weight: bold;
    font-style: italic;
}

#outer-wrapper {
    overflow: hidden;
}

#wrapper {
    margin-top: 50px;
}

.sidebar {
    float: left;
    margin: -200px 10px 0 10px;

    .sidebar-inset {
        background-color: transparent;
        box-shadow: none;
        border: none;
        padding: 0;

        img {
            border: none;
            max-width: none;
            margin-bottom: @gridGutterWidth;
        }

        img.tab {
            width: 200%;
        }

        img.tab-preferences {
            width: 100%;
        }
    }
}

.main-column {
    width: 580px;

    .intro {
        .font-size(20px);
        .open-sans-light;
        font-style: italic;
        padding-bottom: 2em;
    }


    section {
        padding-top: 2.5em;
        border-top: solid 3px @borderColor;

        h4 {
            .open-sans;
            font-style: italic;
        }

        p {
            clear: both;
        }

        img {
            margin: @gridGutterWidth 0;
            display: block;
        }

        &.tls-discover,
        &.tls-started {
            img {
                margin-top: 0;
            }
        }
        
        ol {
            list-style: none; 
            counter-reset: array;
            font-style: italic;
            font-weight: bold;

            li {
                margin: 0px;
            }

            li:before {
                counter-increment:array;
                content: counter(array) ") ";
            }

            li:nth-child(2),
            li:nth-child(3) {
                float: left;
                width: 46%;
                margin-right: 20px;
            }
        }
    }
}

@media only screen and (min-width: @breakTablet) and (max-width: @breakDesktop) {

    .sidebar {
        margin-top: 0;
        width: 580px;

        .sidebar-inset img.tab {
            width: 100%;
        }
    } 
}

@media only screen and (max-width: 760px) {

    .main-column {
        width: 100%;
        margin-left: 0;

        section {
            ol li:nth-child(2), 
            ol li:nth-child(3) {
                width: 100%;
            }
        }
    }

    .sidebar {
        width: 100%;
        margin-top: 0;
        margin-left: 0;

        .sidebar-inset img.tab {
            width: 100%;
        }
    } 
}

